# opengv

./: .gitignore  .pypirc.template  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PARALLEL_HYBRID_PROPOSAL.md  README.md  README_PYTHON.md  SQPNP_COMPLETE_ANALYSIS.md  SQPNP_HYBRID_ANALYSIS.md  WHEEL_BUILDING.md  build_wheel.sh  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  opengvTargets.cmake
benchmark/: README.md  benchmark_panorama_algorithms.cpp
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  opengvTargets.cmake
docs/: ALGORITHM_SELECTION.md  UPnP_VS_SQPNP_ANALYSIS.md
include/opengv/absolute_pose/: methods.hpp
include/opengv/absolute_pose/modules/: Sqpnp.hpp  sqpnp.hpp
include/opengv/math/: angular.hpp  nullspace.hpp
include/opengv/sac_problems/absolute_pose/: AbsolutePoseSacProblem.hpp
modules/: FindEigen.cmake
python/: CMakeLists.txt  README_TESTS.md  benchmark_p3p_solvers.py  lambda_twist_p3p.py  pyopengv.cpp  run_all_tests.py  test_absolute_pose_basic.py  test_backward_facing.py  test_panorama.py  test_relative_pose.py  test_triangulation.py  test_utils.py  tests.py  types.hpp
scripts/: build_macos.sh  build_ubuntu22.04.sh  build_ubuntu22.04_wheel.sh  build_ubuntu24.04.sh  build_windows_clang_ninja.sh  build_windows_cmd.bat  build_windows_cmd_debug.bat  build_windows_conda.sh  test_conda_env.bat  test_conda_env.sh  test_conda_env_windows.sh  test_windows_build.bat
src/absolute_pose/: CentralAbsoluteAdapter.cpp  MACentralAbsolute.cpp  MANoncentralAbsolute.cpp  NoncentralAbsoluteAdapter.cpp  NoncentralAbsoluteMultiAdapter.cpp  methods.cpp
src/absolute_pose/modules/: Sqpnp.cpp  Sqpnp_parallel_prototype.cpp  main.cpp  sqpnp.cpp
src/math/: angular.cpp  arun.cpp  nullspace.cpp
src/point_cloud/: MAPointCloud.cpp  PointCloudAdapter.cpp  methods.cpp
src/relative_pose/: CentralRelativeAdapter.cpp  CentralRelativeMultiAdapter.cpp  CentralRelativeWeightingAdapter.cpp  MACentralRelative.cpp  MANoncentralRelative.cpp  MANoncentralRelativeMulti.cpp  NoncentralRelativeAdapter.cpp  NoncentralRelativeMultiAdapter.cpp  methods.cpp
src/relative_pose/modules/: main.cpp
src/relative_pose/modules/fivept_nister/: modules.cpp
src/sac_problems/absolute_pose/: AbsolutePoseSacProblem.cpp
test/: test_absolute_pose.cpp  test_absolute_pose_sac.cpp  test_backward_vector_analysis.cpp  test_noncentral_relative_pose.cpp  test_noncentral_relative_pose_sac.cpp  test_p3p_backward_vectors.cpp  test_panorama_algorithms.cpp  test_panorama_sqpnp.cpp  test_panorama_sqpnp_vs_epnp.cpp  test_relative_pose.cpp  test_sqpnp.cpp  test_sqpnp_comparison.cpp  test_sqpnp_edge_cases.cpp  test_sqpnp_hybrid_benchmark.cpp  test_sqpnp_omnidirectional.cpp  time_measurement.cpp  time_measurement.hpp
