[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2",
    "pybind11>=2.6.0",
    "cmake>=3.15",
    "ninja"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyopengv"
version = "1.0.0"
description = "Python bindings for OpenGV - A library for solving calibrated central and non-central geometric vision problems"
readme = "README.txt"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Laurent Kneip", email = "kneip.laurent@gmail.com"}
]
maintainers = [
    {name = "Laurent Kneip", email = "kneip.laurent@gmail.com"}
]
keywords = [
    "computer-vision",
    "pose-estimation",
    "geometric-vision",
    "sfm",
    "calibration",
    "pnp",
    "ransac",
    "omnidirectional",
    "panoramic"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    "numpy>=1.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy"
]
test = [
    "pytest>=6.0",
    "numpy>=1.19.0"
]

[project.urls]
Homepage = "http://laurentkneip.github.io/opengv"
Repository = "https://github.com/laurentkneip/opengv"
Documentation = "http://laurentkneip.github.io/opengv"
"Bug Tracker" = "https://github.com/laurentkneip/opengv/issues"

[tool.setuptools]
packages = ["pyopengv"]

[tool.setuptools.package-data]
pyopengv = ["*.so", "*.pyd", "*.dll"]

[tool.pytest.ini_options]
testpaths = ["python/tests.py"]
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
