[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.12", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyopengv"
version = "1.0.0"
description = "Python bindings for OpenGV - geometric vision library"
readme = "README.md"
authors = [
    {name = "Laurent Kneip", email = "kneip.laurent@gmail.com"}
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "http://laurentkneip.github.io/opengv"
Repository = "https://github.com/laurentkneip/opengv"

[tool.setuptools]
packages = []  # No pure Python packages, only extension module

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
]
